--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,15 +10,7 @@ body {
   height: 100vh;
   overflow: hidden;
 }
-#circle {
-  width: 30px;
-  height: 30px;
-  -webkit-border-radius: 25px;
-  -moz-border-radius: 25px;
-  border-radius: 25px;
-  background: #ffa500;
-  margin-right: 20px;
-}
+
 /**
 ------------------------------------
 ---------- HEADER ------------------
@@ -49,6 +41,21 @@ body {
   display: flex;
   align-items: center;
 }
+#circle {
+  width: 30px;
+  height: 30px;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  border-radius: 25px;
+  background: #ffa500;
+  margin-right: 20px;
+}
+
+#name {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+}
 
 .navbar--menu {
   display: flex;
@@ -75,4 +82,36 @@ body {
   text-decoration: none;
   align-items: center;
   justify-content: center;
+}
+
+/**
+------------------------------------
+---------- FIRST SECTION ------------------
+------------------------------------
+**/
+
+.first-section {
+  max-width: 1100px;
+  height: 604px;
+  margin: 100px auto;
+}
+.first-section {
+  display: grid;
+  width: 100%;
+  height: 505px;
+  z-index: 1;
+  max-width: 1100px;
+  padding: 0 50px;
+  margin: 90px auto;
+  align-items: center;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+}
+
+.esther-image {
+  width: 600px;
+  height: 600px;
+  border-radius: 50%;
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
 }
