--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,12 +3,13 @@
   margin: 0;
   padding: 0px;
   font-family: "DM Sans", sans-serif;
+  
 }
 
 body {
   width: 100%;
   height: 100vh;
-  overflow: hidden;
+  position: absolute;
 }
 
 /**
@@ -37,7 +38,7 @@ body {
   justify-content: space-between;
 }
 
-#beans-logo {
+#logo {
   display: flex;
   align-items: center;
 }
@@ -86,7 +87,7 @@ body {
 
 /**
 ------------------------------------
----------- FIRST SECTION ------------------
+---------- FIRST SECTION -----------
 ------------------------------------
 **/
 
@@ -107,11 +108,182 @@ body {
   grid-template-columns: 1fr 1fr;
   justify-content: center;
 }
-
 .esther-image {
-  width: 600px;
-  height: 600px;
+  width: 500px;
+  height: 500px;
   border-radius: 50%;
-  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  -webkit-filter: grayscale(100%); 
   filter: grayscale(100%);
 }
+.first-text{
+  margin-left: 50px;
+  width: 350px;
+  margin-bottom: 100px;
+}
+.first-text h1{
+  font-style: work sans;
+  font-weight: bold;
+  font-size: 100px;
+  margin-bottom: 30px;
+  letter-spacing:-0.02em;
+}
+.first-text h2{
+  font-size: 20px;
+  letter-spacing:-0.02em
+}
+.first-text p{
+  font-size: 15px;
+  margin-top: 20px;
+  letter-spacing:-0.02em;
+  line-height: 22px;
+}
+.res-circley {
+  /* (A) PERCENTAGE WIDTH & BORDER RADIUS */
+  width: 100%;
+  border-radius: 50%;
+  
+
+  /* (B) BACKGROUND COLOR */ 
+  background: #def133;
+  border: 1px solid #000;
+  /* (C) NECESSARY TO POSITION TEXT BLOCK */
+  line-height: 0;
+  position: relative;
+ 
+}
+ 
+/* (D) MATCH HEIGHT */
+.res-circley::after {
+  content: "";
+  display: block;
+  padding-bottom: 100%; 
+}
+
+.res-circler {
+  /* (A) PERCENTAGE WIDTH & BORDER RADIUS */
+  width: 100%;
+  border-radius: 50%;
+  margin-left: 10px;
+ 
+
+  /* (B) BACKGROUND COLOR */ 
+  background: #e46612;
+  border: 1px solid #000;
+  /* (C) NECESSARY TO POSITION TEXT BLOCK */
+  line-height: 0;
+  position: relative;
+}
+ 
+/* (D) MATCH HEIGHT */
+.res-circler::after {
+  content: "";
+  display: block;
+  padding-bottom: 100%;
+}
+
+.res-circleb {
+  /* (A) PERCENTAGE WIDTH & BORDER RADIUS */
+  width: 100%;
+  border-radius: 50%;
+  margin-left: 5px;
+
+  /* (B) BACKGROUND COLOR */ 
+  background: #70a2f3;
+ 
+  border: 1px solid #000;
+  /* (C) NECESSARY TO POSITION TEXT BLOCK */
+  line-height: 0;
+  position: relative;
+}
+ 
+/* (D) MATCH HEIGHT */
+.res-circleb::after {
+  content: "";
+  display: block;
+  padding-bottom: 100%;
+}
+ 
+/* (E) TEXT BLOCK */
+.circle-txt {
+  /* (E1) CENTER TEXT IN CIRCLE */
+  position: absolute;
+  bottom: 50%;
+  width: 100%;
+  text-align: center;
+ 
+  /* (E2) THE FONT - NOT REALLY IMPORTANT */
+  font-family: arial, sans-serif;
+  font-weight: bold;
+}
+.circles{
+  display: flex;
+  margin-top: 20px;
+}
+
+hr{
+  margin-left: 60px;
+  text-align: center;
+  width: 1200px;
+}
+/**
+------------------------------------
+---------- Footer------
+------------------------------------
+**/
+
+.footer--container {
+ 
+  mix-blend-mode: normal;
+  padding: 5rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 1366px;
+  margin: auto;
+}
+
+.footer--links {
+  max-width: 1366px;
+  display: flex;
+  justify-content: center;
+}
+
+.footer--link--wrapper {
+  display: flex;
+}
+
+.footer--link--items {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 0 100px;
+  text-align: left;
+  width: 160px;
+  box-sizing: border-box;
+}
+
+
+
+.footer--link--items h2 {
+  margin-bottom: 20px;
+  color:#000;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14.708px;
+  line-height: 15px;
+}
+
+.footer--link--items a {
+  color:#000;
+  text-decoration: none;
+  margin-bottom: 1.4rem;
+  width: 190px;
+  font-family: "Mulish", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14.708px;
+  line-height: 14px;
+ 
+}
+
